--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,5 +3,5 @@ title: "Kade Engine"
 description: "Kade Engine is a mod for Friday Night Funkin', including a full engine rework, replays, and more."
 show_downloads: true
 replace_index_with: "https://cors-thing.puyo.workers.dev/master/"
-logo: "https://github.com/KadeDev/Kade-Engine/raw/master/KadeEngineLogo.png"
-url: "https://KadeDev.github.io/Kade-Engine/"
+logo: "https://raw.githubusercontent.com/haya3218/ShitEngine/master/KadeEngineLogo.png"
+url: "https://haya3218.github.io/ShitEngine/"
